--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,242 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {}
+  "newProjectRoot": "apps",
+  "projects": {
+    "app-one": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "apps/app-one",
+      "sourceRoot": "apps/app-one/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/app-one",
+            "index": "apps/app-one/src/index.html",
+            "main": "apps/app-one/src/main.ts",
+            "polyfills": "apps/app-one/src/polyfills.ts",
+            "tsConfig": "apps/app-one/tsconfig.app.json",
+            "aot": false,
+            "assets": [
+              "apps/app-one/src/favicon.ico",
+              "apps/app-one/src/assets"
+            ],
+            "styles": [
+              "apps/app-one/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/app-one/src/environments/environment.ts",
+                  "with": "apps/app-one/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "app-one:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "app-one:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "app-one:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "apps/app-one/src/test.ts",
+            "polyfills": "apps/app-one/src/polyfills.ts",
+            "tsConfig": "apps/app-one/tsconfig.spec.json",
+            "karmaConfig": "apps/app-one/karma.conf.js",
+            "assets": [
+              "apps/app-one/src/favicon.ico",
+              "apps/app-one/src/assets"
+            ],
+            "styles": [
+              "apps/app-one/src/styles.css"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/app-one/tsconfig.app.json",
+              "apps/app-one/tsconfig.spec.json",
+              "apps/app-one/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "apps/app-one/e2e/protractor.conf.js",
+            "devServerTarget": "app-one:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "app-one:serve:production"
+            }
+          }
+        }
+      }
+    },
+    "app-two": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "apps/app-two",
+      "sourceRoot": "apps/app-two/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/app-two",
+            "index": "apps/app-two/src/index.html",
+            "main": "apps/app-two/src/main.ts",
+            "polyfills": "apps/app-two/src/polyfills.ts",
+            "tsConfig": "apps/app-two/tsconfig.app.json",
+            "aot": false,
+            "assets": [
+              "apps/app-two/src/favicon.ico",
+              "apps/app-two/src/assets"
+            ],
+            "styles": [
+              "apps/app-two/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/app-two/src/environments/environment.ts",
+                  "with": "apps/app-two/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "app-two:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "app-two:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "app-two:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "apps/app-two/src/test.ts",
+            "polyfills": "apps/app-two/src/polyfills.ts",
+            "tsConfig": "apps/app-two/tsconfig.spec.json",
+            "karmaConfig": "apps/app-two/karma.conf.js",
+            "assets": [
+              "apps/app-two/src/favicon.ico",
+              "apps/app-two/src/assets"
+            ],
+            "styles": [
+              "apps/app-two/src/styles.css"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/app-two/tsconfig.app.json",
+              "apps/app-two/tsconfig.spec.json",
+              "apps/app-two/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "apps/app-two/e2e/protractor.conf.js",
+            "devServerTarget": "app-two:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "app-two:serve:production"
+            }
+          }
+        }
+      }
+    }}
 }
